added webpack server

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <script defer src="../dist/bundle.js"></script>
   </head>
   <body>
-    <h1>Welcome to my TypeScript Game!</h1>
+    <h1>Welcome to my TypeScript Game! v1</h1>
     <!-- Другой контент страницы -->
   </body>
 </html>
